      interface.

    - Moved URLTool to CMFCore. Added interface and basic tests.
      (Collector #67)

    - Added FSFile skin object, in order to allow .swf files (et al.) in 
      skins

    - Added 'listMetaTags' skin method, which filters the DublinCore
      metadata into a form suitable for inclusion as <meta> tags.

  Bug Fixes

    - Document: Ensured that 'edit()' and 'PUT()' strip of xhtml headers and
      html headers including DOCTYPE declarations. (Collector #41)

    - Fixed some minor buglets. (Collector #80, #94 and #95)

    - Ensure that a couple of calls to string.split only split into a 
      maximum of two parts. 
      (Collector #82)

    - Enabled the CMF to be installed in a PRODUCTS_PATH.
      In doing so, also made it easier to move CMF sites between 
      Windows and Unix.
      (Collector #64)

    - Multimodule checkin to convert calls from user.getUserName() to
      user.getId() where appropriate.  User names should not be used
      as immutable references, while user ids should.  The distinction
      is not clearly enforcd in the stock user folder or any current user
      folder implementations, but newer user folder implementations
      will rely upon it.

    - Remove redundant VERSION.txt files;  the canonical spelling is
      'version.txt' (Collector #13).

    - Fixed a race condition in CMFCore.FSObject._updateFromFS() which
      sometimes led to initialization problems in FSPythonScripts.
      (Collector #37)

    - FSPageTemplates overwrote a user-generated 'Content-Type' header.
      We now check to make sure a Content-Type header is not already set
      before allowing a page template to set its own.

    - Fixed CalendarTool to use portal_type and not Type to search for
      events in the catalog (Collector #28, thanks to Heimo Laukkanen
      for the report).

    - Fixed a bug in CalendarTool where events were not showing on the
      last day of the month.